syntax = "proto3";

import "DTO/note_type.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.NoteTypes";


message GetAllNoteTypesRequestProto {
  TraceDataProto traceData = 1;
}

message GetAllNoteTypesResponseProto {
  repeated NoteTypeProto note_types = 1;
}

message GetNoteTypeByIdRequestProto {
  string note_type_id = 1;
  TraceDataProto traceData = 2;
}

service NoteTypeProtoRequestService {
  rpc GetAllNoteTypes(GetAllNoteTypesRequestProto) returns (GetAllNoteTypesResponseProto);
  rpc GetNoteTypeById(GetNoteTypeByIdRequestProto) returns (NoteTypeProto);
}
